# dojos

./: .gitignore  README.md
c/: .ycm_extra_conf.py  Dockerfile  make_dojo
c/dojo_template/: .ycm_extra_conf.py  Makefile
c/dojo_template/source/: CMakeLists.txt  dojo_name.h  test_dojo_name.c  test_dojo_name.h  test_main.c
c/dojo_template/template/: CMakeLists.txt  Makefile
c/dojo_template/template/source/: CMakeLists.txt
c/dojos/fizz_buzz/: CMakeLists.txt  Makefile
c/dojos/fizz_buzz/source/: CMakeLists.txt  fizz_buzz.c  fizz_buzz.h  test_fizz_buzz.c  test_fizz_buzz.h  test_main.c
c/dojos/game_of_life/: CMakeLists.txt  Makefile
c/dojos/game_of_life/source/: CMakeLists.txt  game_of_life.c  game_of_life.h  main.c  test_game_of_life.c  test_game_of_life.h  test_main.c
common/: make_dojo
cpp/: .ycm_extra_conf.py  Dockerfile
cpp/dojo_template/: .ycm_extra_conf.py  CMakeLists.txt  Makefile
cpp/dojo_template/source/: CMakeLists.txt  dojo_name.cpp  test_dojo_name.cpp
cpp/dojos/fizz_buzz/: .ycm_extra_conf.py  CMakeLists.txt  Makefile
cpp/dojos/fizz_buzz/source/: CMakeLists.txt  fizz_buzz.hpp  test_fizz_buzz_helper.hpp
cpp/fizz_buzz/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  fizz_buzz.cpp  fizz_buzz.hpp  test_fizz_buzz.cpp  test_fizz_buzz_helper.hpp
